--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>supermen</title>
 </head>
+
 <body>
-    supermen
+    <p>
+        To learn AJAX, you must be familiar with the XML<wbr>Http<wbr>Request Object.
+    </p>
+    
 </body>
 </html>
