--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <p>
         To learn AJAX, you must be familiar with the XML<wbr>Http<wbr>Request Object.
     </p>
-    
+
+    <textarea rows="4" cols="50">
+        На Html5Css.ru вы узнаете, как сделать сайт. Мы предлагаем бесплатные учебники по всем технологиям веб-разработки.
+        </textarea>
+
+        
 </body>
 </html>
