--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <textarea rows="4" cols="50">
         На Html5Css.ru вы узнаете, как сделать сайт. Мы предлагаем бесплатные учебники по всем технологиям веб-разработки.
         </textarea>
-
         
+        <svg width="100" height="100">
+            <circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="yellow" />
+          </svg>
+
 </body>
 </html>
