--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
             <circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="yellow" />
           </svg>
 
+          p>This text contains <sup>superscript</sup> text.</p>
+
 </body>
 </html>
