--- a/index.html
+++ b/index.html
@@ -23,5 +23,11 @@
 
           p>This text contains <sup>superscript</sup> text.</p>
 
+          <details>
+            <summary>Copyright 1999-2019.</summary>
+            <p> - by Refsnes Data. All Rights Reserved.</p>
+            <p>All content and graphics on this web site are the property of the company Refsnes Data.</p>
+          </details>
+
 </body>
 </html>
