--- a/index.html
+++ b/index.html
@@ -29,5 +29,7 @@
             <p>All content and graphics on this web site are the property of the company Refsnes Data.</p>
           </details>
 
+          <p>This text contains <sub>subscript</sub> text.</p>
+
 </body>
 </html>
