--- a/index.html
+++ b/index.html
@@ -31,5 +31,8 @@
 
           <p>This text contains <sub>subscript</sub> text.</p>
 
+          <p>Html5Css.ru - крупнейший в мире сайт веб-разработки.</p>
+<p><small>Copyright 1999-2019 by Refsnes Data</small></p>
+
 </body>
 </html>
