--- a/index.html
+++ b/index.html
@@ -34,5 +34,7 @@
           <p>Html5Css.ru - крупнейший в мире сайт веб-разработки.</p>
 <p><small>Copyright 1999-2019 by Refsnes Data</small></p>
 
+<footer>Talgarbek</footer>
+
 </body>
 </html>
